@@ -276,6 +276,8 @@ endif()
 # for kernel-<target>.bc
 set(POCL_INSTALL_PRIVATE_DATADIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/pocl" CACHE PATH "POCL private datadir")
 
+file(RELATIVE_PATH POCL_INSTALL_PRIVATE_DATADIR_REL ${POCL_INSTALL_PUBLIC_LIBDIR} ${POCL_INSTALL_PRIVATE_DATADIR})
+
 # for poclu.h
 set(POCL_INSTALL_PUBLIC_HEADER_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}" CACHE PATH "POCL public header dir")
 
@@ -640,9 +642,9 @@ if(UNIX)
       set(DEFAULT_HOST_LD_FLAGS "-dylib -w -lm")
     endif()
   elseif(ANDROID_COMPILER)
-    set(DEFAULT_HOST_LD_FLAGS "-L/system/lib/ -shared -ldl -lc -lm /system/lib/crtbegin_so.o /system/lib/crtend_so.o")
+    set(DEFAULT_HOST_LD_FLAGS "-L/system/lib/ -shared -ldl -lc /system/lib/crtbegin_so.o /system/lib/crtend_so.o")
   else()
-    set(DEFAULT_HOST_LD_FLAGS "-shared -lm")
+    set(DEFAULT_HOST_LD_FLAGS "-shared")
   endif()
   set(LIBMATH "-lm")
 elseif(WIN32)
@@ -1334,6 +1336,11 @@ if(UNIX)
          DESTINATION "${POCL_INSTALL_PKGCONFIG_DIR}")
 
 endif()
+
+##########################################################
+
+install(FILES "${CLANG_RESOURCE_DIR}/include/opencl-c.h"
+         DESTINATION "${POCL_INSTALL_PRIVATE_DATADIR}/include")
 
 #############################################################
 
