@@ -186,7 +186,7 @@ else()
   set(POCL_PUBLIC_LINK_LIST "${LTDL_LIB}" ${CMAKE_THREAD_LIBS_INIT} ${POCL_DEVICES_LINK_LIST} ${LTTNG_UST_LDFLAGS})
 endif()
 
-set(POCL_PRIVATE_LINK_LIST ${CLANG_LIBFILES} ${POCL_LLVM_LIBS} ${LLVM_SYSLIBS})
+set(POCL_PRIVATE_LINK_LIST ${CLANG_LIBFILES} ${POCL_LLVM_LIBS} ${LLVM_SYSLIBS} ${LIBMATH})
 
 if(SANITIZER_OPTIONS)
   list(INSERT POCL_PUBLIC_LINK_LIST 0 ${SANITIZER_LIBS})
