@@ -6,6 +6,8 @@ Changes updated until commit 8cb33c3399a (April 4 2019).
 Kernel Compiler
 ---------------
 - Specialize work-group functions for global offset (0,0,0).
+- A pocl installation with clang, hwloc and libtool statically linked in
+  is now relocatable.
 
 1.3 April 2019
 ==============
